Patch IA, character, monument
correct IA buffing it, Character brokken for Núr or Síl, add monument

--- a/3362815204/localisation/piem_monuments_l_english.yml
+++ b/3362815204/localisation/piem_monuments_l_english.yml
@@ -55,3 +55,93 @@ munas_pearl_lighthouse_title: "Pearl of Munas Lighthouse"
 munas_pearl_lighthouse: "Pearl of Munas Lighthouse"
 great_project_munas_pearl_lighthouse: "Pearl of Munas Lighthouse"
 munas_pearl_lighthouse_desc: "Crowned by the sacred Pearl of Munas, this radiant lighthouse focuses divine light into a blinding beam capable of setting enemy ships ablaze. Revered as both weapon and holy relic, it guides the faithful through storms and strikes down the heretics who defy the sea's will."
+
+wall_of_castonath_1_title: "White Walls of Castanor"
+wall_of_castonath_1: "White Walls of Castanor"
+great_project_wall_of_castonath_1: "White Walls of Castanor"
+wall_of_castonath_1_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_2_title: "White Walls of Castanor"
+wall_of_castonath_2: "White Walls of Castanor"
+great_project_wall_of_castonath_2: "White Walls of Castanor"
+wall_of_castonath_2_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_3_title: "White Walls of Castanor"
+wall_of_castonath_3: "White Walls of Castanor"
+great_project_wall_of_castonath_3: "White Walls of Castanor"
+wall_of_castonath_3_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_4_title: "White Walls of Castanor"
+wall_of_castonath_4: "White Walls of Castanor"
+great_project_wall_of_castonath_4: "White Walls of Castanor"
+wall_of_castonath_4_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_5_title: "White Walls of Castanor"
+wall_of_castonath_5: "White Walls of Castanor"
+great_project_wall_of_castonath_5: "White Walls of Castanor"
+wall_of_castonath_5_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_6_title: "White Walls of Castanor"
+wall_of_castonath_6: "White Walls of Castanor"
+great_project_wall_of_castonath_6: "White Walls of Castanor"
+wall_of_castonath_6_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_7_title: "White Walls of Castanor"
+wall_of_castonath_7: "White Walls of Castanor"
+great_project_wall_of_castonath_7: "White Walls of Castanor"
+wall_of_castonath_7_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_8_title: "White Walls of Castanor"
+wall_of_castonath_8: "White Walls of Castanor"
+great_project_wall_of_castonath_8: "White Walls of Castanor"
+wall_of_castonath_8_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_9_title: "White Walls of Castanor"
+wall_of_castonath_9: "White Walls of Castanor"
+great_project_wall_of_castonath_9: "White Walls of Castanor"
+wall_of_castonath_9_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_10_title: "White Walls of Castanor"
+wall_of_castonath_10: "White Walls of Castanor"
+great_project_wall_of_castonath_10: "White Walls of Castanor"
+wall_of_castonath_10_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_11_title: "White Walls of Castanor"
+wall_of_castonath_11: "White Walls of Castanor"
+great_project_wall_of_castonath_11: "White Walls of Castanor"
+wall_of_castonath_11_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_12_title: "White Walls of Castanor"
+wall_of_castonath_12: "White Walls of Castanor"
+great_project_wall_of_castonath_12: "White Walls of Castanor"
+wall_of_castonath_12_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+wall_of_castonath_13_title: "White Walls of Castanor"
+wall_of_castonath_13: "White Walls of Castanor"
+great_project_wall_of_castonath_13: "White Walls of Castanor"
+wall_of_castonath_13_desc: "White Walls of Castanor, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+westgate_gp_title: "Westgate"
+westgate_gp: "Westgate"
+great_project_westgate_gp: "Westgate"
+westgate_gp_desc: "The great gates within the tall white walls of the city of Castonath, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+southgate_gp_title: "Southgate"
+southgate_gp: "Southgate"
+great_project_southgate_gp: "Southgate"
+southgate_gp_desc: "The great gates within the tall white walls of the city of Castonath, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+oldhaven_gate_gptitle: "Oldhaven"
+oldhaven_gate_gp: "Oldhaven"
+great_project_oldhaven_gate_gp: "Oldhaven"
+oldhaven_gate_gp_desc: "The great gates within the tall white walls of the city of Castonath, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+ardent_keep_gp_title: "Ardent keep"
+ardent_keep_gp: "Ardent keep"
+great_project_ardent_keep_gp: "Ardent keep"
+ardent_keep_gp_desc: "The great gates within the tall white walls of the city of Castonath, now in ruins, but which, once rebuilt, could once again form the impenetrable defense that once protected the kingdom within."
+
+moonhaven_gp_title: "Moonhaven"
+moonhaven_gp: "Moonhaven"
+great_project_moonhaven_gp: "Moonhaven"
+moonhaven_gp_desc: "The capital of the Elves of the Empire. Its tall white walls inspire confidence, but are most renowned for their beauty. Here, the Elves shared their craftsmanship after their arrival in Escann... Many soldiers come here to learn the Elven techniques of combat, hoping perhaps to resemble those graceful beings."
