--- a/3362815204/localisation/piem_monuments_l_french.yml
+++ b/3362815204/localisation/piem_monuments_l_french.yml
@@ -56,3 +56,93 @@ munas_pearl_lighthouse_title: "Phare de la Perle de Munas"
 munas_pearl_lighthouse: "Phare de la Perle de Munas"
 great_project_munas_pearl_lighthouse: "Phare de la Perle de Munas"
 munas_pearl_lighthouse_desc: "Couronné par la Perle sacrée de Munas, ce phare resplendissant concentre la lumière divine en un rayon aveuglant capable d'embraser les flottes ennemies. Révéré à la fois comme arme et comme relique sacrée, il guide les fidèles à travers les tempêtes et foudroie les hérétiques qui défient la volonté de la mer."
+
+wall_of_castonath_1_title: "Mur blanc de Castanor"
+wall_of_castonath_1: "Mur blanc de Castanor"
+great_project_wall_of_castonath_1: "Mur blanc de Castanor"
+wall_of_castonath_1_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_2_title: "Mur blanc de Castanor"
+wall_of_castonath_2: "Mur blanc de Castanor"
+great_project_wall_of_castonath_2: "Mur blanc de Castanor"
+wall_of_castonath_2_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_3_title: "Mur blanc de Castanor"
+wall_of_castonath_3: "Mur blanc de Castanor"
+great_project_wall_of_castonath_3: "Mur blanc de Castanor"
+wall_of_castonath_3_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_4_title: "Mur blanc de Castanor"
+wall_of_castonath_4: "Mur blanc de Castanor"
+great_project_wall_of_castonath_4: "Mur blanc de Castanor"
+wall_of_castonath_4_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_5_title: "Mur blanc de Castanor"
+wall_of_castonath_5: "Mur blanc de Castanor"
+great_project_wall_of_castonath_5: "Mur blanc de Castanor"
+wall_of_castonath_5_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_6_title: "Mur blanc de Castanor"
+wall_of_castonath_6: "Mur blanc de Castanor"
+great_project_wall_of_castonath_6: "Mur blanc de Castanor"
+wall_of_castonath_6_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_7_title: "Mur blanc de Castanor"
+wall_of_castonath_7: "Mur blanc de Castanor"
+great_project_wall_of_castonath_7: "Mur blanc de Castanor"
+wall_of_castonath_7_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_8_title: "Mur blanc de Castanor"
+wall_of_castonath_8: "Mur blanc de Castanor"
+great_project_wall_of_castonath_8: "Mur blanc de Castanor"
+wall_of_castonath_8_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_9_title: "Mur blanc de Castanor"
+wall_of_castonath_9: "Mur blanc de Castanor"
+great_project_wall_of_castonath_9: "Mur blanc de Castanor"
+wall_of_castonath_9_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_10_title: "Mur blanc de Castanor"
+wall_of_castonath_10: "Mur blanc de Castanor"
+great_project_wall_of_castonath_10: "Mur blanc de Castanor"
+wall_of_castonath_10_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_11_title: "Mur blanc de Castanor"
+wall_of_castonath_11: "Mur blanc de Castanor"
+great_project_wall_of_castonath_11: "Mur blanc de Castanor"
+wall_of_castonath_11_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_12_title: "Mur blanc de Castanor"
+wall_of_castonath_12: "Mur blanc de Castanor"
+great_project_wall_of_castonath_12: "Mur blanc de Castanor"
+wall_of_castonath_12_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+wall_of_castonath_13_title: "Mur blanc de Castanor"
+wall_of_castonath_13: "Mur blanc de Castanor"
+great_project_wall_of_castonath_13: "Mur blanc de Castanor"
+wall_of_castonath_13_desc: "Les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein"
+
+westgate_gp_title: "Porte de l'ouest"
+westgate_gp: "Porte de l'ouest"
+great_project_westgate_gp: "Porte de l'ouest"
+westgate_gp_desc: "Les grandes portes dans les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein."
+
+southgate_gp_title: "Porte du Sud"
+southgate_gp: "Porte du Sud"
+great_project_southgate_gp: "Porte du Sud"
+southgate_gp_desc: "Les grandes portes dans les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein."
+
+oldhaven_gate_gptitle: "Vieux Paradis"
+oldhaven_gate_gp: "Vieux Paradis"
+great_project_oldhaven_gate_gp: "Vieux Paradis"
+oldhaven_gate_gp_desc: "Les grandes portes dans les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein."
+
+ardent_keep_gp_title: "Fort Ardent"
+ardent_keep_gp: "Fort Ardent"
+great_project_ardent_keep_gp: "Fort Ardent"
+ardent_keep_gp_desc: "Les grandes portes dans les grands murs blancs de la cité de Castonath, en ruine, mais qui, une fois reconstruit, pourraient reformer la défense impénétrable qui, jadis protégeait le royaume en son sein."
+
+moonhaven_gp_title: "Havre Lunaire"
+moonhaven_gp: "Havre Lunaire"
+great_project_moonhaven_gp: "Havre Lunaire"
+moonhaven_gp_desc: "La capitale des elfes de l'empire. Ses hauts murs blancs inspirent confiance mais sont surtout reconnu pour leur beauté. Ici, les elfes ont exportés leurs savoirs faires après leur arrivée en Escan... Ici, nombre de soldats viennent à apprendre les techniques de combat elfe, en espérant peut être ressembler à ces gracieuses créatures."
