Commit MJ tool upgrade
2 bouttons Spawn rebel & Event perso MJ

--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -43,11 +43,13 @@ glp_enable_disable_factions_loc: "§REnable/Disable Factions§!" #Nothing to cha
 
 #New buttons
 glp_change_dev_in_province_loc: "§GModification of dev§!"
-glp_magical_manupulation_loc: "§GMagical Manipulation§!" 
+glp_magical_manupulation_loc: "§GMagical Manipulation§!"
+glp_event_perso_MJ_loc: "§GEvent Perso GM§!" 
+glp_spawn_rebel_loc: "§RRebel Spawning§!" 
 
 #Empty buttons ready to be changed
-glp_ignore_tech_formation_loc: "Add/Remove Ignore Tech Formation" #To be removed
-glp_release_pope_loc: "Release Pope" #To be removed
+
+
 glp_supress_inquisition_decision_loc: "Supress Inquisition Vote" #To be removed
 glp_polish_events_spawn_loc: "Spawn Polish Sejm Events" #To be removed
 glp_remove_autonomy_loc: "Remove Autonomy(Elizabeth)" #To be removed
