--- a/3362815204/localisation/GLP_gui_l_french.yml
+++ b/3362815204/localisation/GLP_gui_l_french.yml
@@ -44,11 +44,11 @@ glp_enable_disable_factions_loc: "§RON/OFF Factions§!" #Rien à changer
 #Nouveaux boutons
 glp_change_dev_in_province_loc: "§GModification du développement§!"
 glp_magical_manupulation_loc: "§GManipulations Magique§!"
+glp_event_perso_MJ_loc: "§GEvent Perso MJ§!"
+glp_spawn_rebel_loc: "§RApparitions de rebelles§!" 
 
 #Boutons vides prêts à être modifiés
 
-glp_ignore_tech_formation_loc: "Ajouter/Retirer Ignorer la Formation Technologique" #À supprimer
-glp_release_pope_loc: "Libérer le Pape" #À supprimer
 glp_supress_inquisition_decision_loc: "Supprimer le Vote de l'Inquisition" #À supprimer
 glp_polish_events_spawn_loc: "Faire apparaître les Événements du Sejm Polonais" #À supprimer
 glp_remove_autonomy_loc: "Retirer l'Autonomie (Elizabeth)" #À supprimer
