--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -763,40 +763,100 @@
  EVTOPTQ5060:0 "Huzzah!"
  EVTOPTR5060:0 "Let us Celebrate. Prepare the Feast!"
  EVTOPTS5060:0 "POG"
- glp_save_edit_events.EVTNAME35:0 "Select NPC advisor"
- glp_save_edit_events.EVTDESC35:0 "Select which of the NPCs you want to convert into an advisor"
- glp_save_edit_events.EVTOPTA35:0 "Nevermind"
- glp_save_edit_events.EVTOPTB35:0 "Vlad Dracula"
- glp_save_edit_events.EVTOPTC35:0 "Elisabeth Bathory"
- glp_save_edit_events.EVTOPTD35:0 "Nosferatu"
- glp_save_edit_events.EVTOPTE35:0 "Jester"
- glp_save_edit_events.EVTOPTF35:0 "Justicar"
- glp_save_edit_events.EVTNAME36:0 "Choose NPC Advisor Type"
- glp_save_edit_events.EVTDESC36:0 "Select what type of advisor you want."
- glp_save_edit_events.EVTOPTA36:0 "Commandant(Discipline)"
- glp_save_edit_events.EVTOPTB36:0 "Army Reformer(Morale)"
- glp_save_edit_events.EVTOPTC36:0 "Trader(Trade Eff)"
- glp_save_edit_events.EVTOPTD36:0 "Spymaster(Spy Eff)"
- glp_save_edit_events.EVTOPTE36:0 "Naturral Scientist(Production Eff)"
- glp_save_edit_events.EVTOPTF36:0 "Master of Mint(Inflation)"
- glp_save_edit_events.EVTOPTG36:0 "Philosopher(Prestige)"
- glp_save_edit_events.EVTOPTH36:0 "Artist(Stability)"
- glp_save_edit_events.EVTOPTI36:0 "Inquisitor(Missionary)"
- glp_save_edit_events.EVTOPTJ36:0 "Statesman(Dip Rep)"
- glp_save_edit_events.EVTNAME37:0 "Choose NPC Advisor Cost"
- glp_save_edit_events.EVTDESC37:0 "Select how much discount advisor will get."
- glp_save_edit_events.EVTOPTA37:0 "-50%"
- glp_save_edit_events.EVTOPTB37:0 "-75%"
- glp_save_edit_events.EVTOPTC37:0 "-85%"
- glp_save_edit_events.EVTNAME38:0 "NPC Advisor Result"
- glp_save_edit_events.EVTDESC38:0 "Check NPC Advisor result. Choose whetever to spawn him or not."
- glp_save_edit_events.EVTOPTA38:0 "Dont want et"
- glp_save_edit_events.EVTOPTB38:0 "Spawn him"
- glp_save_edit_events.EVTNAME39:0 "Received NPC Advisor"
- glp_save_edit_events.EVTDESC39:0 "My [Root.Monarch.GetTitle]! The advisor we were promised by the oficcials from The Vampiric Conclave have arrived in our [Root.GovernmentName], our nation will now eclipse all others in their glory!"
- glp_save_edit_events.EVTOPTA39:0 "We need to use this to our advantage!"
- glp_new_npc_advisor_tt:0 "§YNew NPC Advisor joined your cause and is ready to help!§!"
- 
+
+ glp_save_edit_events.EVTNAME35:0 "Manual events for GM"
+ glp_save_edit_events.EVTDESC35:0 "Choose which event you want to spawn in the game"
+ glp_save_edit_events.EVTMJEVTZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMJEVTA01:0 "Event of the slave speculation"
+ glp_save_edit_events.EVTMJEVTA01TT:0 "This event grant a temporary boost for 35 years for thoses who choose to join the embrace the slave speculation the aftermath is pricey..."
+ glp_slave_speculation_bonus_modifier:0 "On the orcish slave market"
+ glp_slave_speculation_malus_modifier:0 "Outside of the orcish slave market"
+
+ glp_save_edit_events.EVTNAME36:0 "Event of Rebels"
+ glp_save_edit_events.EVTDESC36:0 "Choose the rebel you want to spawn"
+ glp_save_edit_events.EVTREBELZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELA01:0 "Spawn Gilets Jaunes"
+ glp_save_edit_events.EVTREBELA02:0 "Spawn Nobles Rebels"
+ glp_save_edit_events.EVTREBELA03:0 "Spawn Pretender Rebels"
+ glp_save_edit_events.EVTREBELA04:0 "Spawn Particularist Rebels"
+ glp_save_edit_events.EVTREBELA05:0 "Spawn Peasant Rebels"
+ glp_save_edit_events.EVTREBELA06:0 "Spawn Effelai Rebels"
+ glp_save_edit_events.EVTREBELA07:0 "Spawn Vampire Rebels"
+ glp_save_edit_events.EVTREBELA08:0 "Spawn Infernal Court Rebels"
+ glp_save_edit_events.EVTREBELA09:0 "Spawn Human Racists Rebels"
+
+ glp_save_edit_events.EVTNAMEA37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCA37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEAZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEAA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEAA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEAA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZEAA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZEAA05:0 "Stack size 25"
+
+ glp_save_edit_events.EVTNAMEB37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCB37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEBZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEBA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEBA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEBA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZEBA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZEBA05:0 "Stack size 25"
+
+ glp_save_edit_events.EVTNAMEC37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCC37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZECZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZECA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZECA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZECA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZECA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZECA05:0 "Stack size 25"
+
+ glp_save_edit_events.EVTNAMED37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCD37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEDZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEDA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEDA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEDA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZEDA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZEDA05:0 "Stack size 25"
+
+ glp_save_edit_events.EVTNAMEE37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCE37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEEZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEEA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEEA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEEA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZEEA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZEEA05:0 "Stack size 25"
+
+ glp_save_edit_events.EVTNAMEF37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCF37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEFZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEFA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEFA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEFA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZEFA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZEFA05:0 "Stack size 25"
+
+ glp_save_edit_events.EVTNAMEH37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCH37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEHZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEHA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEHA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEHA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZEHA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZEHA05:0 "Stack size 25"
+
+ glp_save_edit_events.EVTNAMEI37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCI37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEIZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEIA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEIA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEIA03:0 "Stack size 5"
+ glp_save_edit_events.EVTREBELSIZEIA04:0 "Stack size 10"
+ glp_save_edit_events.EVTREBELSIZEIA05:0 "Stack size 25"
+
  glp_save_edit_events.EVTNAME40: "Magical event for country [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC40:0 "As a master of all magic, change thier fate for magic."
  glp_save_edit_events.MAGICALZZ1:0 "Nevermind"
@@ -956,7 +1016,20 @@
  glp_gm_events.EVTDESC4:0 "His Highness, Vlad Draculea has visited [From.Owner.GetName] in his travels to share the knowledge of institution!\nPointy sticks are suddenly the fashion craze of the season! Garlic on the other hand... Not so much."
  glp_gm_events.EVTOPTA4:0 "Thank You Vlad Draculea!"
  glp_institution_spawned_tt:0 "§YInstitution has beeen spawned in one of your provinces!§!"
+
+ glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
+ glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
+ glp_gm_events.EVTSEPCULATIONA01:0 "Let's join this lucrative business !"
+ glp_gm_events.EVTSEPCULATIONA02:0 "I don't want to be part of this horrible business"
  
+ glp_gm_events.EVTNAME6:0 "The orcish slave aftermath"
+ glp_gm_events.EVTDESC6:0 "After an intensive blobbing of Escann, the orcish abundance is no more ! We have speculated too much on the overabundance of the orcs. Now everyone is fighting for the last orcs available in the market like their life depends on it."
+ glp_gm_events.EVTSEPCULATIONB01:0 "What a disaster"
+
+ glp_gm_events.EVTNAME7:0 "The orcish slave aftermath"
+ glp_gm_events.EVTDESC7:0 "After an intensive blobbing of Escann, the orcish abundance is no more ! We have made the choice of not relying on this horrible trade. Now we see other countries have a big issue with the over dependance on the orcish slavery."
+ glp_gm_events.EVTSEPCULATIONB02:0 "We can laugh on them !"
+
  glp_save_edit_events.EVTNAME71:0 "[From.GetName] Create Building"
  glp_save_edit_events.EVTDESC71:0 "Decide what kind of buildings you want in [From.GetName]"
  glp_save_edit_events.EVTBATZZ1:0 "Nevermind"
