--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -761,6 +761,15 @@
  EVTOPTQ5060:0 "Hourra !"
  EVTOPTR5060:0 "Célébrons. Préparez le festin !"
  EVTOPTS5060:0 "POG"
+
+ glp_save_edit_events.EVTNAME35:0 "Événements manuels pour MJ"
+ glp_save_edit_events.EVTDESC35:0 "Choisissez quel événement vous souhaitez déclencher dans le jeu"
+ glp_save_edit_events.EVTMJEVTZZ1:0 "Non, peu importe"
+ glp_save_edit_events.EVTMJEVTA01:0 "Événement de la spéculation sur les esclaves"
+ glp_save_edit_events.EVTMJEVTA01TT:0 "Cet événement offre un bonus temporaire de 35 ans à ceux qui choisissent de participer à la spéculation sur les esclaves, mais les conséquences seront coûteuses..."
+ glp_slave_speculation_bonus_modifier:0 "Sur le marché des esclaves orques"
+ glp_slave_speculation_malus_modifier:0 "En dehors du marché des esclaves orques"
+ 
  glp_save_edit_events.EVTNAME35:0 "Sélectionner un conseiller PNJ"
  glp_save_edit_events.EVTDESC35:0 "Sélectionnez lequel des PNJ vous souhaitez convertir en conseiller."
  glp_save_edit_events.EVTOPTA35:0 "Non, peu importe"
@@ -954,6 +963,19 @@
  glp_gm_events.EVTDESC4:0 "Son Altesse, Vlad Draculea, a visité [From.Owner.GetName] lors de ses voyages pour partager les connaissances de l'institution !\nLes bâtons pointus sont soudainement à la mode cette saison ! L'ail, en revanche... Beaucoup moins."
  glp_gm_events.EVTOPTA4:0 "Merci Vlad Draculea !"
  glp_institution_spawned_tt:0 "§YUne institution est apparue dans l'une de vos provinces !§!"
+
+ glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
+ glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
+ glp_gm_events.EVTSEPCULATIONA01:0 "Participons à ce commerce lucratif !"
+ glp_gm_events.EVTSEPCULATIONA02:0 "Je ne veux pas prendre part à ce commerce horrible"
+ 
+ glp_gm_events.EVTNAME6:0 "Les conséquences de l'esclavage orque"
+ glp_gm_events.EVTDESC6:0 "Après une invasion massive de l'Escann, la surabondance d'orques n'est plus qu'un lointain souvenir ! Nous avons trop spéculé sur leur abondance. Maintenant, tout le monde se bat pour les derniers orques disponibles sur le marché, comme si leurs vie en dépendait."
+ glp_gm_events.EVTSEPCULATIONB01:0 "Quelle catastrophe..."
+ 
+ glp_gm_events.EVTNAME7:0 "Les conséquences de l'esclavage orque"
+ glp_gm_events.EVTDESC7:0 "Après une invasion massive de l'Escann, la surabondance d'orques n'est plus qu'un lointain souvenir ! Nous avons choisi de ne pas dépendre de ce commerce horrible. Maintenant, nous voyons d'autres pays confrontés à de graves problèmes en raison de leur dépendance excessive à l'esclavage orque."
+ glp_gm_events.EVTSEPCULATIONB02:0 "Nous pouvons nous moquer d'eux !"
 
  glp_save_edit_events.EVTNAME71:0 "Créer un bâtiment dans [From.GetName]"
  glp_save_edit_events.EVTDESC71:0 "Décidez quel type de bâtiments vous voulez dans [From.GetName]."
@@ -1632,3 +1654,9 @@
  glp_2024_events.EVTOPTX7:0 "Retirer l'artefact Pieux de Van Helsing"
  glp_2024_events.EVTOPTY7:0 "Accorder un conquérant mythique"
  glp_2024_events.EVTOPTZ7:0 "Accorder un grand conquérant"
+
+ MJ_rebels_name:0 "Les gilets jaunes"
+ MJ_rebels_title:0 "Les gilets jaunes"
+ MJ_rebels_army:0 "Armée de gilets jaunes"
+ MJ_rebels_demand:0 "Les casseurs font leur oeuvres"
+ MJ_rebels_demand_desc:0 "MACRON DESTRUCTION !"
