petit patch MT rubyhold

--- a/3362815204/localisation/Flavour_Rubyhold_A20_l_english.yml
+++ b/3362815204/localisation/Flavour_Rubyhold_A20_l_english.yml
@@ -23,6 +23,7 @@ A20_anbenncost_rival_desc: "WIP"
 
 A20_hold_of_the_world_desire_title: "Hold of the World's Desire"
 A20_hold_of_the_world_desire_desc: "WIP"
+rubyhold_no_other_province_higher_dev_tt: "No other province in the world has a higher development than Rubyhold"
 
 A20_rosemetal_mines_title: "Rosemetal mines"
 A20_rosemetal_mines_desc: "WIP"
@@ -103,7 +104,7 @@ hold_boost_8: "Power Hold VIII"
 hold_boost_9: "Power Hold IX"
 hold_boost_10: "Power Hold X"
 
-unlock_rosemetal_merc_tt: "Unlock a spetial mercenary company, The Rosemetal Engineers Company"
+unlock_rosemetal_merc_tt: "Unlock a special mercenary company, The Rosemetal Engineers Company"
 merc_rosemetal_engineers_company: "The Rosemetal Engineers Company"
 
 rose_party_siege_engineers: "Rose party siege Engineers"
