--- a/3362815204/localisation/Flavour_Rubyhold_A20_l_french.yml
+++ b/3362815204/localisation/Flavour_Rubyhold_A20_l_french.yml
@@ -23,6 +23,7 @@ A20_anbenncost_rival_desc: "WIP"
 
 A20_hold_of_the_world_desire_title: "Forteresse du Désir du Monde"
 A20_hold_of_the_world_desire_desc: "WIP"
+rubyhold_no_other_province_higher_dev_tt: "Aucune autre province au monde n’a un développement supérieur à Rubyhold"
 
 A20_rosemetal_mines_title: "Mines de rosémétal"
 A20_rosemetal_mines_desc: "WIP"
