Correction loca, buff/nerf ideas

--- a/3362815204/localisation/Flavour_Rubyhold_A20_l_english.yml
+++ b/3362815204/localisation/Flavour_Rubyhold_A20_l_english.yml
@@ -1,44 +1,44 @@
 ﻿l_english:
 
 A20_rubyhold_empire_title: "Rubyhold and the Empire"
-A20_rubyhold_empire_desc: "WIP"
+A20_rubyhold_empire_desc: "description is WIP"
 
 A20_rubyhold_vs_silverforge_title: "Ruby versus Silver"
-A20_rubyhold_vs_silverforge_desc: "WIP"
+A20_rubyhold_vs_silverforge_desc: "description is WIP"
 
 A20_end_of_rivalry_title: "End of the Rivalry"
-A20_end_of_rivalry_desc: "WIP"
+A20_end_of_rivalry_desc: "description is WIP"
 
 A20_rubyhold_institute_title: "Rubyhold Institute"
-A20_rubyhold_institute_desc: "WIP"
+A20_rubyhold_institute_desc: "description is WIP"
 
 A20_race_studies_title: "Elf, Halfling, Gnome studies"
-A20_race_studies_desc: "WIP"
+A20_race_studies_desc: "description is WIP"
 
 A20_multirace_institute_title: "A Multirace institute"
-A20_multirace_institute_desc: "WIP"
+A20_multirace_institute_desc: "description is WIP"
 
 A20_anbenncost_rival_title: "Anbenncost Rival ?"
-A20_anbenncost_rival_desc: "WIP"
+A20_anbenncost_rival_desc: "description is WIP"
 
 A20_hold_of_the_world_desire_title: "Hold of the World's Desire"
-A20_hold_of_the_world_desire_desc: "WIP"
+A20_hold_of_the_world_desire_desc: "description is WIP"
 rubyhold_no_other_province_higher_dev_tt: "No other province in the world has a higher development than Rubyhold"
 
 A20_rosemetal_mines_title: "Rosemetal mines"
-A20_rosemetal_mines_desc: "WIP"
+A20_rosemetal_mines_desc: "description is WIP"
 
 A20_find_purest_ruby_title: "Find the purest ruby"
-A20_find_purest_ruby_desc: "WIP"
+A20_find_purest_ruby_desc: "description is WIP"
 
 A20_backlash_title: "The Backlash"
-A20_backlash_desc: "WIP"
+A20_backlash_desc: "description is WIP"
 
 A20_request_help_title: "Request for help"
-A20_request_help_desc: "WIP"
+A20_request_help_desc: "description is WIP"
 
 A20_end_of_despair_title: "End of the despair"
-A20_end_of_despair_desc: "WIP"
+A20_end_of_despair_desc: "description is WIP"
 
 A20_tunnel_calculations_title: "Calculations for the tunnel"
 A20_tunnel_calculations_desc: "We need to aim for verkal kozenad"
@@ -47,43 +47,70 @@ A20_digging_the_tunnel_title: "Digging the tunnel"
 A20_digging_the_tunnel_desc: "We were not supposed to surface here..."
 
 A20_a_little_bit_offset_title: "A little bit offset"
-A20_a_little_bit_offset_desc: "WIP"
+A20_a_little_bit_offset_desc: "description is WIP"
 
-A20_ruby_mountains: "Ruby Mountains"
-A20_ruby_mountains: "WIP"
+A20_ruby_mountains_title: "Ruby Mountains"
+A20_ruby_mountains_desc: "description is WIP"
 
 A20_hold_1_title: "Digging a Hold I"
-A20_hold_1_desc: "WIP"
+A20_hold_1_desc: "description is WIP"
 
 A20_hold_2_title: "Digging a Hold II"
-A20_hold_2_desc: "WIP"
+A20_hold_2_desc: "description is WIP"
 
 A20_hold_3_title: "Digging a Hold III"
-A20_hold_3_desc: "WIP"
+A20_hold_3_desc: "description is WIP"
 
 A20_hold_4_title: "Digging a Hold IV"
-A20_hold_4_desc: "WIP"
+A20_hold_4_desc: "description is WIP"
 
 A20_hold_5_title: "Digging a Hold V"
-A20_hold_5_desc: "WIP"
+A20_hold_5_desc: "description is WIP"
 
 A20_hold_6_title: "Digging a Hold VI"
-A20_hold_6_desc: "WIP"
+A20_hold_6_desc: "description is WIP"
 
 A20_hold_7_title: "Digging a Hold VII"
-A20_hold_7_desc: "WIP"
+A20_hold_7_desc: "description is WIP"
 
 A20_hold_8_title: "Digging a Hold VIII"
-A20_hold_8_desc: "WIP"
+A20_hold_8_desc: "description is WIP"
 
 A20_hold_9_title: "Digging a Hold IX"
-A20_hold_9_desc: "WIP"
+A20_hold_9_desc: "description is WIP"
 
 A20_lencori_plan_title: "The New Lencori Plan"
-A20_lencori_plan_desc: "WIP"
+A20_lencori_plan_desc: "description is WIP"
 
 A20_claim_ruby_crown_title: "Claim the Ruby Crown"
-A20_claim_ruby_crown_desc: "WIP"
+A20_claim_ruby_crown_desc: "description is WIP"
+
+A20_patron_of_the_citadels_title: "Patron of the citadels"
+A20_patron_of_the_citadels_desc: "description is WIP"
+
+A20_architect_of_the_citadels_title: "Architect of the citadels"
+A20_architect_of_the_citadels_desc: "description is WIP"
+
+A20_twin_citadel_title: "Twin citadel"
+A20_twin_citadel_desc: "description is WIP"
+
+A20_rose_seige_ing_title: "Rose party siege Engineers"
+A20_rose_seige_ing_desc: "description is WIP"
+
+A20_learning_of_lillac_war_title: "Learning of the Lilac Wars"
+A20_learning_of_lillac_war_desc: "description is WIP"
+
+A20_rosemetal_company_title: "The Rosemetal Engineers Company"
+A20_rosemetal_company_desc: "description is WIP"
+
+A20_rosemetal_armor_title: "Rosemetal Armor"
+A20_rosemetal_armor_desc: "description is WIP"
+
+A20_stronbellow_academy_title: "Strongbellow Academy"
+A20_stronbellow_academy_desc: "description is WIP"
+
+A20_rosemetal_artillery_title: "Rosemetal Artillery"
+A20_rosemetal_artillery_desc: "description is WIP"
 
 searching_purest_ruby: "Searching the purest ruby"
 ruby_madness: "The ruby Madness"
