--- a/3362815204/localisation/new_policies_l_english.yml
+++ b/3362815204/localisation/new_policies_l_english.yml
@@ -1111,8 +1111,57 @@ anbennar_forteress:0 "anbennar_forteress"
 anbennar_militarism:0 "Magic knows best"
 
 # Offensive policy
-  offensive_strategic:0 "offensive_strategic"
+offensive_strategic:0 "offensive_strategic"
 
 # defensive policies
-  defensive_strategic:0 "defensive_strategic"
-  forteress_defensive:0 "forteress_defensive"
+defensive_strategic:0 "defensive_strategic"
+forteress_defensive:0 "forteress_defensive"
+
+##custom tooltip for marines buff
+amphibious_artificery_tt: "§GMarines gain:§! +10% Fire Damage"
+amphibious_artificery_desc: "§GMarines gain:§! +10% Fire Damage"
+amphibious_artificery_modifier: "Amphibious Artificery"
+
+amphibious_war_production_tt: "§GMarines gain:§! +33% Reinforcement Speed"
+amphibious_war_production_desc: "§GMarines gain:§! +33% Reinforcement Speed"
+amphibious_war_production_modifier: "Amphibious War Production"
+
+amphibious_shock_tt: "§GMarines gain:§! +5% Shock Damage, -5% Shock Damage Taken"
+amphibious_shock_desc: "§GMarines gain:§! +5% Shock Damage, -5% Shock Damage Taken"
+amphibious_shock_modifier: "Amphibious Shock Training"
+
+amphibious_fire_tt: "§GMarines gain:§! +5% Fire Damage, -5% Fire Damage Taken"
+amphibious_fire_desc: "§GMarines gain:§! +5% Fire Damage, -5% Fire Damage Taken"
+amphibious_fire_modifier: "Amphibious Fire Drills"
+
+amphibious_offensive_tt: "§GMarines gain:§! +5% Fire Damage, +5% Shock Damage, +2.5% Fire Damage Taken, +2.5% Shock Damage Taken"
+amphibious_offensive_desc: "§GMarines gain:§! +5% Fire Damage, +5% Shock Damage, +2.5% Fire Damage Taken, +2.5% Shock Damage Taken"
+amphibious_offensive_modifier: "Amphibious Offensive Doctrine"
+
+amphibious_defensive_tt: "§GMarines gain:§! -2.5% Fire Damage Taken, -2.5% Shock Damage Taken"
+amphibious_defensive_desc: "§GMarines gain:§! -2.5% Fire Damage Taken, -2.5% Shock Damage Taken"
+amphibious_defensive_modifier: "Amphibious Defensive Doctrine"
+
+amphibious_quality_tt: "§GMarines gain:§! +5% Discipline"
+amphibious_quality_desc: "§GMarines gain:§! +5% Discipline"
+amphibious_quality_modifier: "Amphibious Quality"
+
+amphibious_strategic_tt: "§GMarines gain:§! +10% Movement Speed"
+amphibious_strategic_desc: "§GMarines gain:§! +10% Movement Speed"
+amphibious_strategic_modifier: "Amphibious Strategic Manoeuvres"
+
+amphibious_legionary_tt: "§GMarines gain:§! -15% Morale Damage Taken"
+amphibious_legionary_desc: "§GMarines gain:§! -15% Morale Damage Taken"
+amphibious_legionary_modifier: "Amphibious Legionary Tradition"
+
+amphibious_standing_army_tt: "§GMarines gain:§! +2.5% Discipline, +0.05 Infantry Fire, +0.05 Infantry Shock"
+amphibious_standing_army_desc: "§GMarines gain:§! +2.5% Discipline, +0.05 Infantry Fire, +0.05 Infantry Shock"
+amphibious_standing_army_modifier: "Amphibious Standing Army"
+
+amphibious_weapon_quality_tt: "§GMarines gain:§! +15% Infantry Combat Ability"
+amphibious_weapon_quality_desc: "§GMarines gain:§! +15% Infantry Combat Ability"
+amphibious_weapon_quality_modifier: "Amphibious Weapon Quality"
+
+amphibious_militarism_tt: "§GMarines gain:§! +50% Morale Recovery Speed"
+amphibious_militarism_desc: "§GMarines gain:§! +50% Morale Recovery Speed"
+amphibious_militarism_modifier: "Amphibious Militarism"
