--- a/3362815204/localisation/Flavour_Rubyhold_A20_l_french.yml
+++ b/3362815204/localisation/Flavour_Rubyhold_A20_l_french.yml
@@ -1,96 +1,123 @@
 ﻿l_french:
 
-A20_rubyhold_empire_title: "Rubyhold et l’Empire"
-A20_rubyhold_empire_desc: "WIP"
+A20_rubyhold_empire_title: "Rubyhold et l'Empire"
+A20_rubyhold_empire_desc: "Description en cours de rédaction."
 
 A20_rubyhold_vs_silverforge_title: "Rubis contre Argent"
-A20_rubyhold_vs_silverforge_desc: "WIP"
+A20_rubyhold_vs_silverforge_desc: "Description en cours de rédaction."
 
 A20_end_of_rivalry_title: "Fin de la rivalité"
-A20_end_of_rivalry_desc: "WIP"
+A20_end_of_rivalry_desc: "Description en cours de rédaction."
 
 A20_rubyhold_institute_title: "Institut de Rubyhold"
-A20_rubyhold_institute_desc: "WIP"
+A20_rubyhold_institute_desc: "Description en cours de rédaction."
 
 A20_race_studies_title: "Études sur les elfes, les demi-hommes et les gnomes"
-A20_race_studies_desc: "WIP"
+A20_race_studies_desc: "Description en cours de rédaction."
 
 A20_multirace_institute_title: "Un institut multirace"
-A20_multirace_institute_desc: "WIP"
+A20_multirace_institute_desc: "Description en cours de rédaction."
 
 A20_anbenncost_rival_title: "Anbenncost, une rivale ?"
-A20_anbenncost_rival_desc: "WIP"
+A20_anbenncost_rival_desc: "Description en cours de rédaction."
 
 A20_hold_of_the_world_desire_title: "Forteresse du Désir du Monde"
-A20_hold_of_the_world_desire_desc: "WIP"
-rubyhold_no_other_province_higher_dev_tt: "Aucune autre province au monde n’a un développement supérieur à Rubyhold"
+A20_hold_of_the_world_desire_desc: "Description en cours de rédaction."
+rubyhold_no_other_province_higher_dev_tt: "Aucune autre province au monde n'a un développement supérieur à Rubyhold"
 
 A20_rosemetal_mines_title: "Mines de rosémétal"
-A20_rosemetal_mines_desc: "WIP"
+A20_rosemetal_mines_desc: "Description en cours de rédaction."
 
 A20_find_purest_ruby_title: "Trouver le rubis le plus pur"
-A20_find_purest_ruby_desc: "WIP"
+A20_find_purest_ruby_desc: "Description en cours de rédaction."
 
 A20_backlash_title: "Le Contrecoup"
-A20_backlash_desc: "WIP"
+A20_backlash_desc: "Description en cours de rédaction."
 
-A20_request_help_title: "Demande d’aide"
-A20_request_help_desc: "WIP"
+A20_request_help_title: "Demande d'aide"
+A20_request_help_desc: "Description en cours de rédaction."
 
 A20_end_of_despair_title: "Fin du désespoir"
-A20_end_of_despair_desc: "WIP"
+A20_end_of_despair_desc: "Description en cours de rédaction."
 
 A20_tunnel_calculations_title: "Calculs pour le tunnel"
 A20_tunnel_calculations_desc: "Nous devons viser verkal kozenad."
 
 A20_digging_the_tunnel_title: "Creusement du tunnel"
-A20_digging_the_tunnel_desc: "Nous n’étions pas censés émerger ici..."
+A20_digging_the_tunnel_desc: "Nous n'étions pas censés émerger ici..."
 
 A20_a_little_bit_offset_title: "Un léger décalage"
-A20_a_little_bit_offset_desc: "WIP"
+A20_a_little_bit_offset_desc: "Description en cours de rédaction."
+
+A20_patron_of_the_citadels_title: "Patron des citadelles"
+A20_patron_of_the_citadels_desc: "Description en cours de rédaction."
+
+A20_architect_of_the_citadels_title: "Architecte des Citadelles"
+A20_architect_of_the_citadels_desc: "Description en cours de rédaction."
+
+A20_twin_citadel_title: "Citadelle Jumelle"
+A20_twin_citadel_desc: "Description en cours de rédaction."
+
+A20_rose_seige_ing_title: "Ingénieurs de Siège de la Rose"
+A20_rose_seige_ing_desc: "Description en cours de rédaction."
+
+A20_learning_of_lillac_war_title: "Enseignements des Guerres de la Lilas"
+A20_learning_of_lillac_war_desc: "Description en cours de rédaction."
+
+A20_rosemetal_company_title: "Compagnie des Ingénieurs Rosemétal"
+A20_rosemetal_company_desc: "Description en cours de rédaction."
+
+A20_rosemetal_armor_title: "Armure en Rosemétal"
+A20_rosemetal_armor_desc: "Description en cours de rédaction."
+
+A20_stronbellow_academy_title: "Académie Strongbellow"
+A20_stronbellow_academy_desc: "Description en cours de rédaction."
+
+A20_rosemetal_artillery_title: "Artillerie Rosemétal"
+A20_rosemetal_artillery_desc: "Description en cours de rédaction."
 
 A20_ruby_mountains: "Montagnes de Rubis"
 
 A20_hold_1_title: "Creuser une forteresse I"
-A20_hold_1_desc: "WIP"
+A20_hold_1_desc: "Description en cours de rédaction."
 
 A20_hold_2_title: "Creuser une forteresse II"
-A20_hold_2_desc: "WIP"
+A20_hold_2_desc: "Description en cours de rédaction."
 
 A20_hold_3_title: "Creuser une forteresse III"
-A20_hold_3_desc: "WIP"
+A20_hold_3_desc: "Description en cours de rédaction."
 
 A20_hold_4_title: "Creuser une forteresse IV"
-A20_hold_4_desc: "WIP"
+A20_hold_4_desc: "Description en cours de rédaction."
 
 A20_hold_5_title: "Creuser une forteresse V"
-A20_hold_5_desc: "WIP"
+A20_hold_5_desc: "Description en cours de rédaction."
 
 A20_hold_6_title: "Creuser une forteresse VI"
-A20_hold_6_desc: "WIP"
+A20_hold_6_desc: "Description en cours de rédaction."
 
 A20_hold_7_title: "Creuser une forteresse VII"
-A20_hold_7_desc: "WIP"
+A20_hold_7_desc: "Description en cours de rédaction."
 
 A20_hold_8_title: "Creuser une forteresse VIII"
-A20_hold_8_desc: "WIP"
+A20_hold_8_desc: "Description en cours de rédaction."
 
 A20_hold_9_title: "Creuser une forteresse IX"
-A20_hold_9_desc: "WIP"
+A20_hold_9_desc: "Description en cours de rédaction."
 
 A20_lencori_plan_title: "Le Nouveau Plan Lencori"
-A20_lencori_plan_desc: "WIP"
+A20_lencori_plan_desc: "Description en cours de rédaction."
 
 A20_claim_ruby_crown_title: "Revendiquer la Couronne de Rubis"
-A20_claim_ruby_crown_desc: "WIP"
+A20_claim_ruby_crown_desc: "Description en cours de rédaction."
 
 searching_purest_ruby: "À la recherche du rubis le plus pur"
 ruby_madness: "La Folie du Rubis"
-location_of_the_red_light_of_anbennar: "Lumière rouge d’Anbennar"
+location_of_the_red_light_of_anbennar: "Lumière rouge d'Anbennar"
 digging_gempath_tunnel: "Creusement du tunnel de Gempath"
 build_help: "Aide à la construction"
 
-multirace_institute_md: "L’Institut Multirace"
+multirace_institute_md: "L'Institut Multirace"
 rubyhold_surpass_abenncost: "Dépasser Anbenncost"
 ruby_crown: "Couronne de Rubis"
 
