--- a/3362815204/localisation/new_policies_l_french.yml
+++ b/3362815204/localisation/new_policies_l_french.yml
@@ -1111,8 +1111,45 @@ anbennar_forteress:0 "anbennar_forteress"
 anbennar_militarism:0 "La magie sait mieux"
 
 # Offensive policy
-  offensive_strategic:0 "offensive_strategic"
+offensive_strategic:0 "offensive_strategic"
 
 # defensive policies
-  defensive_strategic:0 "defensive_strategic"
-  forteress_defensive:0 "forteress_defensive"
+defensive_strategic:0 "defensive_strategic"
+forteress_defensive:0 "forteress_defensive"
+
+##custom tooltip for marines buff
+amphibious_artificery_tt: "§GLes marines gagnent :§! +10 % de dégâts de feu"
+amphibious_artificery_modifier: "Artificerie Amphibie"
+
+amphibious_war_production_tt: "§GLes marines gagnent :§! +33 % de vitesse de renforcement"
+amphibious_war_production_modifier: "Production de Guerre Amphibie"
+
+amphibious_shock_tt: "§GLes marines gagnent :§! +5 % de dégâts de choc, -5 % de dégâts de choc subis"
+amphibious_shock_modifier: "Entraînement de Choc Amphibie"
+
+amphibious_fire_tt: "§GLes marines gagnent :§! +5 % de dégâts de feu, -5 % de dégâts de feu subis"
+amphibious_fire_modifier: "Exercices de Feu Amphibies"
+
+amphibious_offensive_tt: "§GLes marines gagnent :§! +5 % dégâts de feu, +5 % dégâts de choc, +2.5 % dégâts de feu subis, +2.5 % dégâts de choc subis"
+amphibious_offensive_modifier: "Doctrine Offensive Amphibie"
+
+amphibious_defensive_tt: "§GLes marines gagnent :§! -2.5 % dégâts de feu subis, -2.5 % dégâts de choc subis"
+amphibious_defensive_modifier: "Doctrine Défensive Amphibie"
+
+amphibious_quality_tt: "§GLes marines gagnent :§! +5 % de discipline"
+amphibious_quality_modifier: "Qualité Amphibie"
+
+amphibious_strategic_tt: "§GLes marines gagnent :§! +10 % de vitesse de déplacement"
+amphibious_strategic_modifier: "Manœuvres Stratégiques Amphibies"
+
+amphibious_legionary_tt: "§GLes marines gagnent :§! -15 % de dégâts au moral subis"
+amphibious_legionary_modifier: "Tradition Légionnaire Amphibie"
+
+amphibious_standing_army_tt: "§GLes marines gagnent :§! +2.5 % discipline, +0.05 feu d’infanterie, +0.05 choc d’infanterie"
+amphibious_standing_army_modifier: "Armée Permanente Amphibie"
+
+amphibious_weapon_quality_tt: "§GLes marines gagnent :§! +15 % de capacité de combat d’infanterie"
+amphibious_weapon_quality_modifier: "Qualité des Armes Amphibies"
+
+amphibious_militarism_tt: "§GLes marines gagnent :§! +50 % de vitesse de récupération du moral"
+amphibious_militarism_modifier: "Militarisme Amphibie"
